--- a/everycheese/templates/cheeses/cheese_form.html
+++ b/everycheese/templates/cheeses/cheese_form.html
@@ -7,7 +7,7 @@
 
 <h1> Add Cheese </h1>
 
-<form method="post" action="{% url 'cheeses:add' %}">
+<form method="post" action="{% url 'cheeses:create' %}">
     {% csrf_token %}
     {{ form | crispy }}
     <button type="submit" class="btn btn-primary">Save</button>
