--- a/everycheese/templates/cheeses/cheese_detail.html
+++ b/everycheese/templates/cheeses/cheese_detail.html
@@ -19,5 +19,12 @@
     </p>
 {% endif %}
 
+<hr/>
+<h3>Submitted by
+    <a href="{% url 'users:detail' cheese.creator.name %}">{{cheese.creator.name}}</a>
+</h3>    
+    {% if cheese.creator.name %}
+        <p>{{ cheese.creator.name }}</p>
+    {%endif%}
 
 {% endblock content %}
