--- a/everycheese/templates/cheeses/cheese_form.html
+++ b/everycheese/templates/cheeses/cheese_form.html
@@ -1,15 +1,16 @@
 {%extends "base.html" %}
 {% load crispy_forms_tags %}
 
-{% block title%} Add Cheese {% endblock title%}
+{% block title%} {{view.action|default:"Add"}} Cheese {% endblock title%}
 
 {% block content %}
+{% with action=view.action|default:"Add"%}
+<h1> {{view.action|default:"Add"}} Cheese </h1>
 
-<h1> Add Cheese </h1>
-
-<form method="post" action="{% url 'cheeses:create' %}">
+<form method="post" action=".">
     {% csrf_token %}
     {{ form | crispy }}
-    <button type="submit" class="btn btn-primary">Save</button>
+    <button type="submit" class="btn btn-primary">{{view.action|default:"Add"}} </button>
 </form>
+{% endwith %}
 {% endblock content %}
