--- a/everycheese/templates/cheeses/cheese_detail.html
+++ b/everycheese/templates/cheeses/cheese_detail.html
@@ -5,7 +5,10 @@
 {% block content %}
 <h2>{{ cheese.name }}</h2>
 <p>
-    <a href="{% url 'cheeses:update' cheese.slug %}">Update</a>
+    <a class="btn btn-primary"
+        href="{% url 'cheeses:update' cheese.slug %}" role="button">
+        Update
+    </a>
 </p>
 
 {% if cheese.firmness %}
@@ -18,7 +21,7 @@
 {% if cheese.country_of_origin %}
     <p>
         Country of Origin: {{ cheese.country_of_origin.name }}
-        <img src="{{ cheese.country_of_origin.flag }}"
+        <img src="{{ cheese.country_of_origin.flag }}">
     </p>
 {% endif %}
 
